--- a/src/app.css
+++ b/src/app.css
@@ -7,3 +7,16 @@
     margin-left: 5vw;
   }
 }
+
+@layer base {
+  h1 {
+    @apply font-arsonist text-9xl text-center;
+  }
+}
+
+@font-face {
+  font-family: Arsonist-Black;
+  font-weight: 800;
+  src: url(/fonts/Arsonist-Black.woff2) format("woff2"), url(/fonts/Arsonist-Black.woff) format("woff");
+  font-display: swap;
+}
