--- a/src/app.css
+++ b/src/app.css
@@ -17,8 +17,18 @@
     @apply mt-12 mb-5;
   }
 
-  .content p {
+  .content p,
+  .content li,
+  .content td {
     @apply mb-4 font-serif text-2xl;
+  }
+
+  content ul {
+    @apply list-disc;
+  }
+
+  content ol {
+    @apply list-decimal;
   }
 
   .content h2 {
