--- a/src/app.css
+++ b/src/app.css
@@ -10,17 +10,21 @@
 
 @layer base {
   h1 {
-    @apply font-arsonist text-9xl text-center lowercase;
+    @apply font-arsonist text-5xl text-center lowercase;
   }
 
   .content h1 {
     @apply mt-12 mb-5;
   }
 
-  .content p,
-  .content li,
-  .content td {
-    @apply mb-4 font-serif text-2xl;
+  p,
+  li,
+  td {
+    @apply mb-4 font-serif text-base;
+  }
+
+  .has-lg-font-size {
+    @apply text-xl;
   }
 
   content ul {
@@ -31,8 +35,26 @@
     @apply list-decimal;
   }
 
-  .content h2 {
-    @apply font-arsonist text-2xl text-left uppercase;
+  h2 {
+    @apply font-arsonist text-xl md:text-2xl text-center uppercase max-w-2xl mx-auto;
+  }
+
+  h3 {
+    @apply font-serif text-base uppercase tracking-wide mb-4; 
+  }
+
+  .wp-block-columns {
+    @apply grid md:grid-cols-2 gap-4;
+  }
+
+  .wp-block-separator {
+    @apply my-8 border border-black;
+  }
+
+  .alignwide {
+    @apply xl:-ml-40 xl:-mr-40;
+
+    border: 1px solid red;  
   }
 }
 
