--- a/src/app.css
+++ b/src/app.css
@@ -6,6 +6,18 @@
   .homesection {
     margin-left: 5vw;
   }
+
+  .wp-block-columns {
+    @apply grid md:grid-cols-2 gap-4;
+  }
+
+  .wp-block-separator {
+    @apply my-8 border border-black;
+  }
+
+  .alignwide {
+    @apply xl:-ml-40 xl:-mr-40;
+  }
 }
 
 @layer base {
@@ -35,26 +47,16 @@
     @apply list-decimal;
   }
 
+  .wp-content a {
+    @apply text-transparent bg-clip-text bg-gradient-to-r from-blue-parrot to-blue-parrot-light hover:bg-gradient-to-l transition-colors duration-300;
+  }
+
   h2 {
-    @apply font-arsonist text-xl md:text-2xl text-center uppercase max-w-2xl mx-auto;
+    @apply mt-12 mb-8 font-arsonist text-xl md:text-2xl text-center lowercase max-w-2xl mx-auto;
   }
 
   h3 {
     @apply font-serif text-base uppercase tracking-wide mb-4; 
-  }
-
-  .wp-block-columns {
-    @apply grid md:grid-cols-2 gap-4;
-  }
-
-  .wp-block-separator {
-    @apply my-8 border border-black;
-  }
-
-  .alignwide {
-    @apply xl:-ml-40 xl:-mr-40;
-
-    border: 1px solid red;  
   }
 }
 
